info/about/team: Fix floats on mobile

--- a/scifiweb/static/scss/_modifiers.scss
+++ b/scifiweb/static/scss/_modifiers.scss
@@ -20,3 +20,15 @@
 .is-circle {
     border-radius: 290486px;
 }
+
+.is-pulled-left-tablet {
+    @media screen and (min-width: $tablet) {
+        float: left !important;
+    }
+}
+
+.is-pulled-right-tablet {
+    @media screen and (min-width: $tablet) {
+        float: right !important;
+    }
+}
